<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crazy Eights</string>
    <string name="Play">Play</string>
    <string name="CreateGame">Create Game</string>
    <string name="Rules">Rules</string>
    <string name="About">About</string>
    <string name="Information_about">This 2-4 player game requires one Android tablet per game and one Android device per player, all of which should have Bluetooth capabilities.  The tablet will serve as the game board, and each of the player’s devices will contain their hands of cards.  The tablet will connect to each of the devices via Bluetooth, and it will handle all logic and communication between these devices.  

To use this application properly, download the application titled “Crazy Eights Player” to the devices that each player will be using.  Once this has been done, first select Create Game from the Main Menu of this application, and then select Join Game from the Main Menu on each player’s device.  Players should then choose this device from the connection list that will appear on their screens.  Press the Start button on this device’s connection screen when all players have been connected in order to start the game.</string>
    <string name="Information_rules">The basic game of Crazy Eights is played with a standard deck of 52 cards. Each player will be dealt five cards and the rest of the cards will be put into a draw pile which is placed face down on the playing table. After the cards are dealt, one card will be taken from and placed next to the draw pile face up. This will serve as the discard pile.

The game will start with player 1 and continue in a counterclockwise fashion around the table. During each turn a player will either need to play a pile from his/her hand or select one card from the draw pile.
\n\n
Basic Game Play:\n	
1. If the top card is not an eight then a player must play a card that matches suit or the number of the last card in the discard pile.\n
2. An eight of any suit may be played at anytime during a players turn. If they choose to play an eight they must declare a suit.\n
3. If an eight is present on the top of the discard pile then a card of the declared suit or another eight can be played.\n
4. A draw will serve as a turn if a player cannot play a card.\n
5. If the first card turned up for the discard pile is an eight, any card from player 1’s hand can be played as the first card. After this, the standard above rules apply.\n
\n

The first player to successfully get rid of all of their cards wins the game. If at any point in the game the draw pile is empty, all of the cards from the discard pile except for the top card will be re-shuffled to form a new draw pile.</string>
    <string name="ConnectActivity_title">Connect to Devices</string>
    <string name="ConnectFailActivity_title">Connection Failure</string>
    <string name="GameResultsActivity_title">Game Results</string>
    <string name="PauseActivity_title">Paused</string>
    <string name="QuitApplicationActivity_title">Quit</string>
    <string name="QuitGameActivity_title">Quit</string>
    <string name="ShowCardsActivity_title">Your Cards</string>
    <string name="pauseGame">Pause</string>
    <string name="quit">Are you sure you want to quit the current game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="Information_about_handheld">This 2-4 player game requires one Android tablet per game and one Android device per player, all of which should have Bluetooth capabilities.  The tablet will serve as the game board, and each of the player’s devices will contain their hands of cards.  The tablet will connect to each of the devices via Bluetooth, and it will handle all logic and communication between these devices.  

To use this application properly, download the application titled “Crazy Eights Game Board” to the tablet that will serve as the game host.  Once this has been done, first select Create Game from the Main Menu of the tablet, and then select Join Game from the Main Menu on each player’s device, including this one.  Players should then choose the host tablet from the connection list that will appear on their screens.  Press the Start button on the host tablet’s connection screen when all players have been connected in order to start the game.</string>
    <string name="Draw">Draw</string>
    
    <!-- Device List -->
    <string name="scanning">Scanning for Devices</string>
    <string name="no_devices_found">No devices found</string>
    <string name="title_device_list">Device List</string>
    <string name="button_scan">Scan for devices</string>
    <string name="new_devices_separator">New Devices</string>
    <string name="connected_devices_separator">Connected Devices</string>
    
    <!-- Connect Screen Handheld -->
    <string name="connecting">Connecting&#8230;</string>
    <string name="waitingForGame">Waiting for game to begin&#8230;</string>
    
    <!-- Connect Devices -->
    <string name="start">Start</string>
    <string name="deviceName">Device Name: </string>
    
    <!-- Disconnected Player -->
    <string name="reconnect">Reconnect</string>
    <string name="drop_player">Drop Player</string>
    <string name="player_lost">A player has been disconnected</string>
    
    <string name="exit_game">Exit Game</string>
    <string name="main_menu">Main Menu</string>
    <string name="resume">Resume</string>
    <string name="waiting">Waiting to reconnect&#8230;</string>
    <string name="winner">You Won!</string>
    <string name="exit_application">Are you sure you want to quit the application?</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="gameboard">Gameboard</string>
    <string name="Spades">Spades</string>
    <string name="Hearts">Hearts</string>
    <string name="Clubs">Clubs</string>
    <string name="selectsuit">Please select a suit</string>
    <string name="Diamonds">Diamonds</string>
    <string name="loser">You Are A Loser</string>
</resources>