<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:keepScreenOn="true"
    android:orientation="vertical" 
    android:background="@drawable/wooden_top">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:paddingBottom="5dp"
        android:paddingTop="0dp" >

        <cs309.a1.shared.TextView
            style="@style/TitleFont"
            android:gravity="center"
            android:text="@string/PauseActivity_title" android:textSize="55sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/title"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <cs309.a1.shared.Button
            android:id="@+id/btResume"
            style="@style/GameButton"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="5dip"
            android:text="@string/resume"
            android:textSize="35sp" />

        <cs309.a1.shared.Button
            android:id="@+id/btRules"
            style="@style/GameButton"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="35dip"
            android:layout_marginRight="35dip"
            android:layout_marginTop="8dip"
            android:text="@string/Rules" android:textSize="30sp"/>

        <cs309.a1.shared.Button
            android:id="@+id/btMainMenu"
            style="@style/GameButton"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="35dip"
            android:layout_marginRight="35dip"
            android:text="@string/main_menu" android:textSize="30sp"/>
        
        <cs309.a1.shared.Button
            android:id="@+id/btExitGame"
            style="@style/GameButton"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="35dip"
            android:layout_marginRight="35dip"
            android:text="@string/exit_game"
            android:textSize="30sp"/>
        
    </LinearLayout>

</RelativeLayout>